[gd_scene load_steps=9 format=2]

[ext_resource path="res://gui/interactables/buildmode_ui.gd" type="Script" id=1]
[ext_resource path="res://gui/component_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://gui/items_container.tscn" type="PackedScene" id=3]
[ext_resource path="res://gui/themes/gui_base_theme.tres" type="Theme" id=4]
[ext_resource path="res://interactables/buildb/build_status.gd" type="Script" id=5]
[ext_resource path="res://interactables/buildb/request_status.gd" type="Script" id=6]
[ext_resource path="res://gui/inventory_gui.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.247059, 0.247059, 0.247059, 1 )

[node name="BuildModeUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
mouse_filter = 2
theme = ExtResource( 4 )
script = ExtResource( 1 )

[node name="BuildStatus" type="Control" parent="."]
unique_name_in_owner = true
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -290.0
margin_bottom = 290.0
script = ExtResource( 5 )

[node name="PanelContainer" type="PanelContainer" parent="BuildStatus"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 320.0
grow_vertical = 2
rect_min_size = Vector2( 320, 100 )
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="BuildStatus/PanelContainer"]
margin_right = 320.0
margin_bottom = 580.0
custom_constants/separation = 0

[node name="status_label" type="Label" parent="BuildStatus/PanelContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 19.0
text = "PC Status"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="BuildStatus/PanelContainer/VBoxContainer"]
margin_left = 10.0
margin_top = 19.0
margin_right = 310.0
margin_bottom = 580.0
size_flags_horizontal = 6
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="cbuttons" type="VBoxContainer" parent="BuildStatus/PanelContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
margin_right = 300.0
margin_bottom = 561.0
rect_min_size = Vector2( 280, 0 )
size_flags_vertical = 3

[node name="case" parent="BuildStatus/PanelContainer/VBoxContainer/ScrollContainer/cbuttons" instance=ExtResource( 2 )]
margin_bottom = 27.0

[node name="motherboard" parent="BuildStatus/PanelContainer/VBoxContainer/ScrollContainer/cbuttons" instance=ExtResource( 2 )]
margin_top = 31.0
margin_bottom = 58.0

[node name="cpu" parent="BuildStatus/PanelContainer/VBoxContainer/ScrollContainer/cbuttons" instance=ExtResource( 2 )]
margin_top = 62.0
margin_bottom = 89.0

[node name="cooler" parent="BuildStatus/PanelContainer/VBoxContainer/ScrollContainer/cbuttons" instance=ExtResource( 2 )]
margin_top = 93.0
margin_bottom = 120.0

[node name="memory" parent="BuildStatus/PanelContainer/VBoxContainer/ScrollContainer/cbuttons" instance=ExtResource( 2 )]
margin_top = 124.0
margin_bottom = 151.0

[node name="storage" parent="BuildStatus/PanelContainer/VBoxContainer/ScrollContainer/cbuttons" instance=ExtResource( 2 )]
margin_top = 155.0
margin_bottom = 182.0

[node name="psu" parent="BuildStatus/PanelContainer/VBoxContainer/ScrollContainer/cbuttons" instance=ExtResource( 2 )]
margin_top = 186.0
margin_bottom = 213.0

[node name="RequestStatus" type="Control" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.914
anchor_right = 0.5
anchor_bottom = 0.914
margin_left = -125.0
margin_top = -50.12
margin_right = 125.0
margin_bottom = -0.119995
grow_horizontal = 2
grow_vertical = 0
rect_min_size = Vector2( 250, 50 )
size_flags_vertical = 3
script = ExtResource( 6 )

[node name="PanelContainer" type="PanelContainer" parent="RequestStatus"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="RequestStatus/PanelContainer"]
margin_right = 250.0
margin_bottom = 50.0
grow_vertical = 0
alignment = 1

[node name="bname" type="Label" parent="RequestStatus/PanelContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 19.0
text = "No build selected"
align = 1

[node name="stats" type="VBoxContainer" parent="RequestStatus/PanelContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 250.0
margin_bottom = 23.0
size_flags_vertical = 3

[node name="send" type="Button" parent="RequestStatus/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 27.0
margin_right = 250.0
margin_bottom = 50.0
disabled = true
text = "SEND"

[node name="BMItems" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -311.0
margin_bottom = 306.0
grow_horizontal = 0
grow_vertical = 2
rect_min_size = Vector2( 250, 0 )
size_flags_vertical = 3
script = ExtResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="BMItems"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -325.5
margin_bottom = 343.5
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 1

[node name="Builds" type="PanelContainer" parent="BMItems/VBoxContainer"]
margin_right = 250.0
margin_bottom = 329.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="BMItems/VBoxContainer/Builds"]
margin_right = 250.0
margin_bottom = 329.0
size_flags_vertical = 3
custom_constants/separation = 0

[node name="builds_bttn" type="Button" parent="BMItems/VBoxContainer/Builds/VBoxContainer"]
margin_right = 250.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
text = "No Build Selected"

[node name="new_project" type="Button" parent="BMItems/VBoxContainer/Builds/VBoxContainer"]
margin_left = 25.0
margin_top = 30.0
margin_right = 225.0
margin_bottom = 53.0
rect_min_size = Vector2( 200, 20 )
size_flags_horizontal = 6
text = "Create New Build"

[node name="build_bc" parent="BMItems/VBoxContainer/Builds/VBoxContainer" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 53.0
margin_right = 250.0
margin_bottom = 329.0

[node name="Components" type="PanelContainer" parent="BMItems/VBoxContainer"]
margin_top = 339.0
margin_right = 250.0
margin_bottom = 669.0
grow_horizontal = 0
grow_vertical = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="BMItems/VBoxContainer/Components"]
margin_right = 250.0
margin_bottom = 330.0
size_flags_vertical = 3

[node name="components_bttn" type="Button" parent="BMItems/VBoxContainer/Components/VBoxContainer"]
margin_right = 250.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
text = "Components"

[node name="comp_bc" parent="BMItems/VBoxContainer/Components/VBoxContainer" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 34.0
margin_right = 250.0
margin_bottom = 330.0

[node name="Notifications" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 40.0
grow_horizontal = 2

[node name="Label" type="Label" parent="Notifications"]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -113.5
margin_top = 50.0
margin_right = 113.5
margin_bottom = 19.0
grow_horizontal = 2
rect_min_size = Vector2( 300, 40 )
custom_styles/normal = SubResource( 1 )
align = 1
valign = 1

[connection signal="_update" from="BuildStatus" to="." method="_on_b_installed_components__update"]
[connection signal="pressed" from="RequestStatus/PanelContainer/VBoxContainer/send" to="RequestStatus" method="_on_send_pressed"]
[connection signal="pressed" from="BMItems/VBoxContainer/Builds/VBoxContainer/builds_bttn" to="BMItems" method="_on_builds_bttn_pressed"]
[connection signal="pressed" from="BMItems/VBoxContainer/Builds/VBoxContainer/new_project" to="." method="_on_new_project_pressed"]
[connection signal="pressed" from="BMItems/VBoxContainer/Components/VBoxContainer/components_bttn" to="BMItems" method="_on_components_bttn_pressed"]
